# projeto-big-data

./: .gitignore  buildspec_dbt.yml  pyproject.toml
data/: prepare_json_orders.py
data/sample/: generate_data.py
dbt/pb_brasilmart/: dbt_project.yml  profiles.yml
docs/tp1/: 01_tema_e_negocio.md  02_entrevista_stakeholders.md  03_conceitos_para_negocio.md  04_arquitetura.md  04_defesa_tecnica.md  05_defesa_tecnica_lakehouse.md  06_setup_databricks.md  arquitetura_brasilmart  arquitetura_drawio.xml  gerar_diagrama.py  gerar_diagrama_mpl.py
docs/tp2/: modelo_dimensional.md  roteiro_prints_tp2_parte1.md
docs/tp3/: roteiro_prints_tp3.md
docs/tp4/: guia_evidencias_tp4.md
infra/aws/: lifecycle_bronze.json  lifecycle_gold.json  lifecycle_raw.json  lifecycle_silver.json  setup_column_security.sh  setup_lake_formation.sh  setup_monitoring.sh  setup_pii_tagging.sh  setup_quicksight.sh  setup_s3.sh  step_functions_workflow.json
infra/aws/codepipeline/: buildspec_dbt.yml  buildspec_infra.yml  pipeline.json
infra/databricks/: bundle.yml  workflow_silver_gold.json
infra/terraform/: codepipeline.tf  column_security.tf  glue.tf  lake_formation.tf  main.tf  monitoring.tf  s3.tf
src/brasilmart/: __init__.py
src/brasilmart/databricks/: 01_ingestao_json_aninhado.py  02_streaming_simulado.py  03_limpeza_bronze.py  tp2_01_delta_lake_conversao.py  tp2_02_unity_catalog_setup.py  tp2_03_bronze_unity_catalog.py  tp2_04_merge_time_travel.py  tp2_05_optimize_zorder.py  tp2_06_monitoramento.py  tp3_01_dlt_silver.py  tp3_02_dlt_cdc_silver.py  (+20 more)
src/vidaplus/: __init__.py
(+23 files in other folders)
