[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brasilmart-data-platform"
version = "0.1.0"
description = "Plataforma de Dados Unificada BrasilMart — Visão 360° do Cliente (Olist Dataset)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "David Lopes", email = "david@noharm.ai"},
]

dependencies = [
    "pyspark>=3.5.0",
    "delta-spark>=3.1.0",
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
glue = [
    "aws-glue-libs>=4.0.0",
]
databricks = [
    "databricks-sdk>=0.28.0",
    "databricks-connect>=14.0.0",
]
data-generation = [
    "faker>=25.0.0",
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["vidaplus"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
